# UIML

./: .gitignore  GL.GLS.DLW_wf_lex.html  GL.GLS.GLS_additive_cut.html  GL.GLS.GLS_calcs.html  GL.GLS.GLS_ctr.html  GL.GLS.GLS_cut_elim.html  GL.GLS.GLS_dec.html  GL.GLS.GLS_der_dec.html  GL.GLS.GLS_exch.html  GL.GLS.GLS_export.html  GL.GLS.GLS_inv_ImpR_ImpL.html  GL.GLS.GLS_termination_measure.html  GL.GLS.GLS_wkn.html  GL.Interpolation.UIGL_And_Or_rules.html  GL.Interpolation.UIGL_Canopy.html  GL.Interpolation.UIGL_Canopy_ImpL.html  GL.Interpolation.UIGL_Canopy_ImpR.html  GL.Interpolation.UIGL_Canopy_nodupseq_perm.html  GL.Interpolation.UIGL_Def_measure.html  GL.Interpolation.UIGL_Diam_N_imp_UI.html  GL.Interpolation.UIGL_Diam_UI_imp_N.html  GL.Interpolation.UIGL_Diam_UI_imp_N_prelim.html  GL.Interpolation.UIGL_LexSeq.html  GL.Interpolation.UIGL_N_imp_UI.html  GL.Interpolation.UIGL_PermutationT.html  GL.Interpolation.UIGL_PermutationTS.html  GL.Interpolation.UIGL_UIDiam_N.html  GL.Interpolation.UIGL_UIOne.html  GL.Interpolation.UIGL_UIThree.html  GL.Interpolation.UIGL_UITwo.html  GL.Interpolation.UIGL_UI_inter.html  GL.Interpolation.UIGL_UI_prelims.html  GL.Interpolation.UIGL_basics.html  GL.Interpolation.UIGL_braga.html  GL.Interpolation.UIGL_irred_high_level.html  GL.Interpolation.UIGL_irred_short.html  GL.Interpolation.UIGL_nodupseq.html  General.List_lemmasT.html  General.ddT.html  General.dd_fc.html  (+75 more)
doc-config/: header.html
docs/: GL.GLS.DLW_wf_lex.html  GL.GLS.GLS_additive_cut.html  GL.GLS.GLS_calcs.html  GL.GLS.GLS_ctr.html  GL.GLS.GLS_cut_elim.html  GL.GLS.GLS_cut_extraction_theorem.html  GL.GLS.GLS_dec.html  GL.GLS.GLS_der_dec.html  GL.GLS.GLS_exch.html  GL.GLS.GLS_export.html  GL.GLS.GLS_inv_ImpR_ImpL.html  GL.GLS.GLS_termination_measure.html  GL.GLS.GLS_wkn.html  GL.Interpolation.UIGL_And_Or_rules.html  GL.Interpolation.UIGL_Canopy.html  GL.Interpolation.UIGL_Canopy_ImpL.html  GL.Interpolation.UIGL_Canopy_ImpR.html  GL.Interpolation.UIGL_Canopy_nodupseq_perm.html  GL.Interpolation.UIGL_Def_measure.html  GL.Interpolation.UIGL_Diam_N_imp_UI.html  GL.Interpolation.UIGL_Diam_UI_imp_N.html  GL.Interpolation.UIGL_Diam_UI_imp_N_prelim.html  GL.Interpolation.UIGL_LexSeq.html  GL.Interpolation.UIGL_N_imp_UI.html  GL.Interpolation.UIGL_PermutationT.html  (+79 more)
(+197 files in other folders)
